<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stereolabs_zed_interfaces</name>
  <version>0.1.0</version>
  <description>Contains message and service definitions used by the ZED nodes.</description>
  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  
  <license>MIT</license>

  <url type="website">https://www.stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
