<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>zed_ros2</name>
  <version>0.2.0</version>
  <description>Stereolabs zed-ros2-wrapper support meta package</description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>zed_interfaces</exec_depend>
  <exec_depend>zed_components</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
