<?xml version="1.0"?>

<!-- Package format 3 according to http://www.ros.org/reps/rep-0149.html -->
<package format="3">
  <name>stereolabs_example_multi_camera</name>
  <version>0.1.0</version>
  <description>
    Example about how to use the ZED ROS2 wrapper with multiple ZED cameras.
  </description>
  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>

  <license>MIT</license>

  <url type="website">https://www.stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
